--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,47 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
 }
+* {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: medium;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: beige;
+}
+
+.faq {
+  margin-bottom: 10px;
+  border-bottom: 1px solid rgb(0, 0, 0, 0.2);
+  padding-bottom: 16px;
+  color: blue;
+}
+.faq > button {
+  border: none;
+  position: absolute;
+  left: 90%;
+  padding: 4px 12px;
+  background: cornflowerblue;
+  border-radius: 4px;
+  color: wheat;
+  font-weight: 800;
+
+}
+
+.answer {
+  padding: 10px;
+  transition: 1s ease display;
+}
+@keyframes display{
+  0%{
+transform:scale(0,0)
+  }
+  100%{
+transform: scale(100%,100%);
+  }
+}
+
